# getlla

./: .gitignore  Cargo.toml  README.md  build.sh  flake.nix  result
examples/android/: README.md  settings.gradle.kts
examples/android/app/: build.gradle.kts
examples/android/app/src/main/: AndroidManifest.xml
examples/android/app/src/main/java/dev/foxhunter/getlla/: Getlla.kt  MainActivity.kt
examples/android/app/src/main/java/dev/foxhunter/getlla/ui/theme/: Color.kt  Theme.kt  Type.kt
examples/android/app/src/main/res/values/: strings.xml  themes.xml
examples/android/getlla-jni/: Cargo.toml  README.md
examples/android/getlla-jni/src/: lib.rs
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/ios/Getlla/Getlla/: ContentView.swift  GetllaApp.swift
examples/ios/Getlla/Getlla.xcodeproj/: project.pbxproj
examples/ios/Getlla/Getlla.xcodeproj/project.xcworkspace/xcuserdata/dgramop.xcuserdatad/: UserInterfaceState.xcuserstate
examples/ios/Getlla/Getlla.xcodeproj/xcuserdata/dgramop.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/macos/: .gitignore  build-macos.sh
getlla.app/Contents/: Info.plist
src/: android.rs  lib.rs  macos.rs  main.rs  windows.rs
