[package]
name = "getlla"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Devices_Sensors", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Variant"] }
windows-sys = { version = "0.60.2", features = ["Win32_System_Com_StructuredStorage", "Win32_System_Variant"] }

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-core-location = "0.3.1"
objc2-foundation = "0.3.1"

[profile.release]
debug = true
