[package]
name = "getlla"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.3", features = ["Devices_Geolocation", "System"] }
windows-sys = "0.60.2"
windows-future = "0.2.1"

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.9.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.1"
objc2-core-location = "0.3.1"
objc2-foundation = "0.3.1"
